# algo

./: CMakeLists.txt  Test.cpp
alg-example/其他/离散化/: 离散化.cpp
alg-example/其他/线性基/: 线性基.cpp
alg-example/动态规划/最长上升子序列/: LIS.cpp
alg-example/图论/数链剖分/: 树链剖分+链、子树更新求值.cpp  轻重链剖分.cpp
alg-example/图论/最小生成树/: Kruskal.cpp  Prim.cpp
alg-example/图论/最短路/: Bellman-Ford.cpp  Floyd-Warshall.cpp  SPFA.cpp  迪杰斯特拉.cpp
alg-example/字符串/字符串哈希/: 双哈希法.cpp
alg-example/数学/排列组合/: Lucas定理.cpp
alg-example/数据结构/ST表/: ST表.cpp
alg-example/数据结构/主席树/: 区间第k大.cpp
alg-example/数据结构/并查集/: 并查集.cpp
alg-example/数据结构/树状数组/: 二维树状数组.cpp  树状数组.cpp
alg-example/数据结构/线段树/: 线段树-区间修改区间求值-加乘更新.cpp  线段树区间修改区间求值.cpp  线段树合并分裂.cpp
alg-example/数论/分解质因数/: 朴素算法.cpp
alg-example/数论/素数判定/: Fermat素性测试.cpp  Miller-Rabin 素性测试.cpp  暴力匹配.cpp
alg-example/数论/素数筛/: 埃式筛法.cpp
atcoder/ABC/257/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp
atcoder/ARC/141/: a.cpp  b.cpp
atcoder/ARC/142/: a.cpp  b.cpp  c.cpp
atcoder/ARC/143/: a.cpp  b.cpp
cf-rating-system/: rating.py
cf-rating-system/tests/: cf_rating_official_1556.json  cf_rating_official_1566.json
contest/1530/a/: a.cpp
contest/1530/b/: b.cpp
contest/1530/c/: c.cpp
contest/1530/d/: d.cpp
contest/1530/h/: h.cpp
contest/1538/a/: a.cpp
contest/1538/b/: b.cpp
contest/1538/c/: c.cpp
contest/1538/d/: d.cpp
contest/1538/f/: f.cpp
contest/1556/a/: a.cpp
contest/1556/b/: b.cpp
contest/1556/c/: c.cpp
hack/: hack.cpp  out.txt
leetcode/: main.cpp
leetcode-problems/: test.cpp
nowcoder/: nowcoder.cpp
problemSet/235/: e.cpp
templates/: tmp.cpp
(+640 files in other folders)
